@@ -1,29 +1,29 @@
-package org.nikitarybalko.food_delivery.order.service;
+package com.nikitarybalko.food_delivery.order.service;
 
+import com.nikitarybalko.food_delivery.catalog.model.Dish;
+import com.nikitarybalko.food_delivery.catalog.model.Restaurant;
+import com.nikitarybalko.food_delivery.catalog.repository.DishRepository;
+import com.nikitarybalko.food_delivery.catalog.repository.RestaurantRepository;
+import com.nikitarybalko.food_delivery.catalog.service.RestaurantService;
+import com.nikitarybalko.food_delivery.order.dto.OrderCreateRequest;
+import com.nikitarybalko.food_delivery.order.dto.OrderItemRequest;
+import com.nikitarybalko.food_delivery.order.dto.OrderResponse;
+import com.nikitarybalko.food_delivery.order.mapper.OrderMapper;
+import com.nikitarybalko.food_delivery.order.model.Order;
+import com.nikitarybalko.food_delivery.order.model.OrderItem;
+import com.nikitarybalko.food_delivery.order.model.OrderStatus;
+import com.nikitarybalko.food_delivery.order.repository.OrderRepository;
+import com.nikitarybalko.food_delivery.shared.exception.ResourceNotFoundException;
+import com.nikitarybalko.food_delivery.user.model.User;
+import com.nikitarybalko.food_delivery.user.service.UserService;
 import lombok.RequiredArgsConstructor;
-import org.nikitarybalko.food_delivery.catalog.model.Dish;
-import org.nikitarybalko.food_delivery.catalog.model.Restaurant;
-import org.nikitarybalko.food_delivery.catalog.repository.DishRepository;
-import org.nikitarybalko.food_delivery.catalog.service.RestaurantService;
-import org.nikitarybalko.food_delivery.order.dto.OrderCreateRequest;
-import org.nikitarybalko.food_delivery.order.dto.OrderItemRequest;
-import org.nikitarybalko.food_delivery.order.dto.OrderItemResponse;
-import org.nikitarybalko.food_delivery.order.dto.OrderResponse;
-import org.nikitarybalko.food_delivery.order.mapper.OrderMapper;
-import org.nikitarybalko.food_delivery.order.model.Order;
-import org.nikitarybalko.food_delivery.order.model.OrderItem;
-import org.nikitarybalko.food_delivery.order.model.OrderStatus;
-import org.nikitarybalko.food_delivery.order.repository.OrderRepository;
-import org.nikitarybalko.food_delivery.shared.exception.ResourceNotFoundException;
-import org.nikitarybalko.food_delivery.user.model.User;
-import org.nikitarybalko.food_delivery.user.repository.UserRepository;
-import org.nikitarybalko.food_delivery.user.service.UserService;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,11 +35,12 @@ public class OrderService {
     private final OrderMapper orderMapper;
     private final UserService userService;
     private final RestaurantService restaurantService;
+    private final RestaurantRepository restaurantRepository;
 
     @Transactional
     public OrderResponse createOrder(OrderCreateRequest request, String userEmail) {
         User user = userService.getUserByEmail(userEmail);
-        Restaurant restaurant = restaurantService.getRestaurantById(request.restaurantId());
+        Restaurant restaurant = restaurantService.getRestaurantEntityById(request.restaurantId());
 
         Order order = new Order();
         order.setUser(user);
@@ -67,12 +68,12 @@ public class OrderService {
             BigDecimal itemTotal = dish.getPrice().multiply(BigDecimal.valueOf(itemRequest.quantity()));
             totalOrderPrice = totalOrderPrice.add(itemTotal);
 
-            order.getItems().add(orderItem);
+            order.addItem(orderItem);
         }
 
         order.setTotalPrice(totalOrderPrice);
 
-        Order savedOrder = orderRepository.save(order);
+        Order savedOrder = orderRepository.saveAndFlush(order);
 
         return orderMapper.toResponse(savedOrder);
     }
@@ -81,6 +82,35 @@ public class OrderService {
         return orderRepository.findAllByUserEmailOrderByCreatedAtDesc(userEmail)
                 .stream()
                 .map(orderMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<OrderResponse> getOrdersForOwner(String ownerEmail) {
+        Restaurant restaurant = restaurantRepository.findByOwnerEmail(ownerEmail)
+                .orElseThrow(() -> new ResourceNotFoundException("Restaurant with owner " + ownerEmail + " not found"));
+
+        List<Order> order = orderRepository.findAllByRestaurantId(restaurant.getId());
+
+        return order.stream()
+                .map(orderMapper::toResponse)
+                .toList();
+    }
+
+    @Transactional
+    public OrderResponse updateOrderStatus(Long id, OrderStatus status, String ownerEmail) {
+        if(status == null) {
+            throw new IllegalArgumentException("Status cannot be null");
+        }
+        Order order = orderRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Order with id " + id + " not found"));
+
+        if (!order.getRestaurant().getOwner().getEmail().equals(ownerEmail)) {
+            throw new AccessDeniedException("У вас немає прав для зміни цього замовлення");
+        }
+
+        order.setStatus(status);
+        Order savedOrder = orderRepository.saveAndFlush(order);
+
+        return orderMapper.toResponse(savedOrder);
     }
 }
